[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/Enemies/Boss_MotherEye/fx/laser3.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/Boss_MotherEye/fx/orb1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/Boss_MotherEye/fx/orb2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemies/Boss_MotherEye/fx/laser1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemies/Boss_MotherEye/fx/laser6.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemies/Boss_MotherEye/fx/laser4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Enemies/Boss_MotherEye/fx/laser9.png" type="Texture" id=7]
[ext_resource path="res://Assets/Enemies/Boss_MotherEye/fx/orb4.png" type="Texture" id=8]
[ext_resource path="res://Assets/Enemies/Boss_MotherEye/fx/laser2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Enemies/Boss_MotherEye/fx/laser8.png" type="Texture" id=10]
[ext_resource path="res://Assets/Enemies/Boss_MotherEye/fx/orb3.png" type="Texture" id=11]
[ext_resource path="res://Assets/Enemies/Boss_MotherEye/fx/laser12loop.png" type="Texture" id=12]
[ext_resource path="res://Assets/Enemies/Boss_MotherEye/fx/laser5.png" type="Texture" id=13]
[ext_resource path="res://Assets/Enemies/Boss_MotherEye/fx/laser13loop.png" type="Texture" id=14]
[ext_resource path="res://Assets/Enemies/Boss_MotherEye/fx/laser7.png" type="Texture" id=15]
[ext_resource path="res://Assets/Enemies/Boss_MotherEye/fx/laser11loop.png" type="Texture" id=16]
[ext_resource path="res://Assets/Enemies/Boss_MotherEye/fx/laser10loop.png" type="Texture" id=17]
[ext_resource path="res://Scripts/Laser.gd" type="Script" id=18]
[ext_resource path="res://Prefabs/audio_manager.tscn" type="PackedScene" id=19]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 11 ), ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 16.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 10 ), ExtResource( 15 ), ExtResource( 5 ), ExtResource( 13 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 9 ), ExtResource( 4 ) ],
"loop": false,
"name": "out",
"speed": 18.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 9 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 13 ), ExtResource( 5 ), ExtResource( 15 ), ExtResource( 10 ), ExtResource( 7 ) ],
"loop": false,
"name": "in",
"speed": 18.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 14 ) ],
"loop": true,
"name": "loop",
"speed": 16.0
}, {
"frames": [  ],
"loop": true,
"name": "null",
"speed": 5.0
} ]

[node name="Laser_h" type="Node2D"]
script = ExtResource( 18 )

[node name="sorite_2" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "idle"
frame = 1
playing = true

[node name="sprite_1" type="AnimatedSprite" parent="."]
position = Vector2( 175, 0 )
frames = SubResource( 1 )
animation = "loop"
frame = 2
playing = true

[node name="hitbox" type="Area2D" parent="."]
position = Vector2( -12, 0 )

[node name="attack_hitbox" type="CollisionPolygon2D" parent="hitbox"]
position = Vector2( 136, 0 )
polygon = PoolVector2Array( -100, 35, 231, 35, 231, -35, -100, -35, -113, -30, -122, -22, -128, -10, -129, -6, -129, 6, -128, 10, -122, 22, -113, 30 )
disabled = true

[node name="hit_timer" type="Timer" parent="."]

[node name="audio_manager" parent="." instance=ExtResource( 19 )]

[connection signal="animation_finished" from="sprite_1" to="." method="_on_sprite_1_animation_finished"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="hit_timer" to="." method="_on_hit_timer_timeout"]
